# docker-monitor-mcp

./: .env.example  .gitignore  .mcp.example.json  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  docker.yml
deploy/: docker-compose.yml  docker-stack.example.yml
docs/: SPEC.md
src/: config.rs  docker.rs  main.rs  mcp.rs  metrics.rs
