[package]
name = "docker-monitor-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Stateless read-only MCP server exposing Docker container logs and host/container metrics"
license = "MIT"
repository = "https://github.com/nizovtsevnv/docker-monitor-mcp"

[[bin]]
name = "docker-monitor-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "time"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
bollard = { version = "0.17", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
anyhow = "1"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
